k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1
---
apiVersion: v1
kind: Namespace
metadata:
  name: app2
