k8s/app2-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2-route
  namespace: app2
spec:
  parentRefs:
  - name: external-http-gateway
    namespace: default
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /app2
    backendRefs:
    - name: app2-svc
      port: 80
